--- a/.github/workflows/pr-rules.yml
+++ b/.github/workflows/pr-rules.yml
@@ -7,7 +7,7 @@ on:
     
 jobs:
   print:
-    runs-on: [ubuntu ]
+    runs-on: [ubuntu-latest ]
     env:
       github: '${{ toJSON(github) }}'
     steps:
